# akoma-markup

./: .env.sample  .gitignore  README.md  pyproject.toml
docs/prototypes/: bnss_prototype.ipynb
example/: demo.py
mock-pkg/: bnss_in_akomantoso.ipynb  test.py
src/akoma_markup/: __init__.py  azure_api.py  cli.py  conversion.py  converter.py  debug_dump.py  extractor.py  llm.py  markdown_table.py  output.py  parser.py  pdf_to_image.py  table_ocr_ai.py  table_ocr_cli.py  tables.py  vision_llm.py  writer.py
src/akoma_markup/parsing/tables/: azure_ocr.py  render.py  rescue.py
src/akoma_markup/parsing/text/: chapter_section_mapping.py
src/akoma_markup/util/llm/: azure_api.py  factory.py  vision.py
src/akoma_markup/util/pdf/: images.py  text.py
tests/: test_cli.py  test_converter.py  test_extractor.py  test_init.py  test_llm.py  test_parser.py  test_writer.py
